# modflow6

./: DEVELOPER.md  _array_handlers_8f90.html  _array_handlers_8f90.js  _array_handlers_8f90_source.html  _array_reader_base_8f90.html  _array_reader_base_8f90_source.html  _array_readers_8f90.html  _array_readers_8f90_source.html  _base_exchange_8f90.html  _base_exchange_8f90_source.html  _base_geometry_8f90.html  _base_geometry_8f90_source.html  _base_model_8f90.html  _base_model_8f90_source.html  _base_solution_8f90.html  _base_solution_8f90_source.html  _block_parser_8f90.html  _block_parser_8f90_source.html  _boundary_package_8f90.html  _boundary_package_8f90.js  _boundary_package_8f90_source.html  _budget_8f90.html  _budget_8f90_source.html  _budget_file_reader_8f90.html  _budget_file_reader_8f90_source.html  _budget_object_8f90.html  _budget_object_8f90_source.html  _budget_term_8f90.html  _budget_term_8f90_source.html  _cell_with_nbrs_8f90.html  _cell_with_nbrs_8f90.js  _cell_with_nbrs_8f90_source.html  _char_string_8f90.html  _char_string_8f90.js  _char_string_8f90_source.html  _circular_geometry_8f90.html  _circular_geometry_8f90_source.html  _connection_builder_8f90.html  _connection_builder_8f90.js  _connection_builder_8f90_source.html  (+4826 more)
.hpc/: cray-hovenweep-meson-build.slurm.batch  cray-meson-build.slurm.batch
autotest/: conftest.py  framework.py  test_gwf_chd01.py  test_gwf_csub_sub03.py  test_gwf_csub_zdisp01.py  test_gwf_libmf6_evt01.py  test_gwf_rch03.py  test_netcdf_gwe_cnd.py  test_netcdf_gwf_disv.py  test_netcdf_gwf_sto01.py  (+2 more)
srcbmi/: meson.build
(+264 files in other folders)
